config/headscale/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  labels:
    app: headscale
